Convert target matchers to CellRelativePath
Reviewed By: gabrielrussoc

shipit-source-id: ea58dea8a9