@@ -20,9 +20,10 @@ import static org.junit.Assert.assertTrue;
 
 import com.facebook.buck.core.model.BuildTargetFactory;
 import com.facebook.buck.core.model.CanonicalCellName;
+import com.facebook.buck.core.model.ImmutableCellRelativePath;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
-import java.nio.file.Paths;
 import org.junit.Test;
 
 public class SubdirectoryBuildTargetMatcherTest {
@@ -33,7 +34,8 @@ public class SubdirectoryBuildTargetMatcherTest {
   public void testApply() {
     SubdirectoryBuildTargetMatcher pattern =
         SubdirectoryBuildTargetMatcher.of(
-            CanonicalCellName.rootCell(), Paths.get("src/com/facebook/buck/"));
+            new ImmutableCellRelativePath(
+                CanonicalCellName.rootCell(), ForwardRelativePath.of("src/com/facebook/buck")));
 
     assertTrue(
         pattern.matches(
